test/tests/stages/5_local_variables/invalid_semantics/extra_credit/postfix_decr_non_lvalue.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CSubtract: 
                    CAssignment: 
                      CPostfix: 
                      None: 
                      CBinary: 
                        CAdd: 
                        CVar: 
                          TIdentifier: a
                          None: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
